--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Learning Safely
 ---
 <div class="blurb">
 	<h1>Heading</h1>
-	<p>blaaaah <a href="/about">Read more about my life...</a></p>
+	<p>blaaaah </p>
 </div><!-- /.blurb -->
