--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Learning Safely
 ---
 <div class="blurb">
-	<h1>A blog about safety in machine learning.</h1>
-	<p>This is a page to express my thoughts on positively aligning the future of artificial intelligence, focussing on safety in machine learning.  </p>
+	<h1>A blog exploring safety in machine learning.</h1>
+	<p>This is a site will help me to express my thoughts on positively aligning the future of artificial intelligence, focussing on safety in machine learning.  </p>
 </div><!-- /.blurb -->
