--- a/index.html
+++ b/index.html
@@ -13,3 +13,8 @@ title: Learning Safely
     </article>
     {% endfor %}
 </section>
+
+<div class="blurb">
+	<h1>Hello</h1>
+	<p> <a href="/about">Read more about me...</a></p>
+</div><!-- /.blurb -->
