--- a/index.html
+++ b/index.html
@@ -15,6 +15,5 @@ title: Learning Safely
 </section>
 
 <div class="blurb">
-	<h1>Hello</h1>
-	<p> <a href="/about">Read more about me...</a></p>
+	<p> <a href="/about">About me...</a></p>
 </div><!-- /.blurb -->
