--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@ title: Learning Safely
 </section>
 
 <div class="blurb">
-	<p> <a href="/about">About me...</a></p>
+	<h1> <a href="/about">About me...</a></h1>
 </div><!-- /.blurb -->
